# CrossyIO

./: 2022li1g044.cabal  README.md
src/: LI12223.hs  Main.hs  Tarefa1_2022li1g044.hs  Tarefa2_2022li1g044.hs  Tarefa3_2022li1g044.hs  Tarefa4_2022li1g044.hs  Tarefa5_2022li1g044.hs  Tarefa6_2022li1g044.hs  save.txt
src/doc/html/: LI12223.html  Tarefa1_2022li1g044.html  Tarefa2_2022li1g044.html  Tarefa3_2022li1g044.html  Tarefa4_2022li1g044.html  Tarefa5_2022li1g044.html  Tarefa6_2022li1g044.html  doc-index.html  index.html
tests/: Spec.hs  Tarefa1_2022li1g044_Spec.hs  Tarefa2_2022li1g044_Spec.hs  Tarefa3_2022li1g044_Spec.hs  Tarefa4_2022li1g044_Spec.hs
